--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+accelerate==1.6.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.17
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
+anyio==4.9.0
 attrs==25.3.0
 beautifulsoup4==4.13.4
+blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 datasets==3.5.0
 dill==0.3.8
+diskcache==5.6.3
 docling==2.30.0
 docling-core==2.26.4
 docling-ibm-models==3.4.1
@@ -20,18 +26,28 @@ filelock==3.18.0
 filetype==1.2.0
 frozenlist==1.6.0
 fsspec==2024.12.0
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.14.0
 hf-xet==1.0.3
+httpcore==1.0.8
+httpx==0.28.1
 huggingface-hub==0.30.2
 idna==3.10
 imageio==2.37.0
 Jinja2==3.1.6
 joblib==1.4.2
 jsonlines==3.1.0
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonref==1.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+langchain-core==0.3.55
+langsmith==0.3.33
 latex2mathml==3.77.0
 lazy_loader==0.4
+llama_cpp_python==0.3.8
 lxml==5.3.2
 markdown-it-py==3.0.0
 marko==2.1.3
@@ -41,6 +57,7 @@ mpire==2.10.2
 mpmath==1.3.0
 multidict==6.4.3
 multiprocess==0.70.16
+narwhals==1.35.0
 networkx==3.4.2
 ninja==1.11.1.4
 numpy==2.2.4
@@ -59,16 +76,20 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
+orjson==3.10.16
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
 pluggy==1.5.0
 propcache==0.3.1
+protobuf==5.29.4
+psutil==7.0.0
 pyarrow==19.0.1
 pyclipper==1.3.0.post6
 pydantic==2.11.3
 pydantic-settings==2.8.1
 pydantic_core==2.33.1
+pydeck==0.9.1
 Pygments==2.19.1
 pylatexenc==2.10
 pypdfium2==4.30.1
@@ -82,6 +103,7 @@ PyYAML==6.0.2
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
+requests-toolbelt==1.0.0
 rich==14.0.0
 rpds-py==0.24.0
 rtree==1.4.0
@@ -95,14 +117,20 @@ setuptools==78.1.0
 shapely==2.1.0
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
 soupsieve==2.6
+streamlit==1.44.1
 sympy==1.13.1
 tabulate==0.9.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tifffile==2025.3.30
 tokenizers==0.21.1
+toml==0.10.2
 torch==2.6.0
 torchvision==0.21.0
+tornado==6.4.2
 tqdm==4.67.1
 transformers==4.51.3
 triton==3.2.0
@@ -111,6 +139,8 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+watchdog==6.0.0
 XlsxWriter==3.2.2
 xxhash==3.5.0
 yarl==1.20.0
+zstandard==0.23.0
